fix: update theme to look nice

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -13,7 +13,11 @@
 .header {
   display: flex;
   flex-direction: column;
-  position: relative;
+  position: absolute;
+  width: 100vw;
+  right: 0;
+  top: 0;
+  padding: 2rem;
 
   @media print {
     display: none;
