--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -300,7 +300,7 @@ mark {
   padding: 40px;
   max-width: 864px;
   min-height: 100vh;
-  border-right: 1px solid rgba(255, 255, 255, 0.1);
+  margin: 0 auto;
 
   &.full,
   &.center {
